--- a/pom.xml
+++ b/pom.xml
@@ -62,10 +62,15 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.45</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
+        </dependency>
     </dependencies>
 
     <build>
-
         <finalName>decluna</finalName>
         <plugins>
             <plugin>
