--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,10 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>decluna</name>
     <packaging>war</packaging>
-    <description>decmoonAndmeli.luna</description>
+    <description>Lovely dictionary</description>
 
     <properties>
         <java.version>1.8</java.version>
-
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -55,7 +54,7 @@
         <dependency>
             <groupId>com.decmoon</groupId>
             <artifactId>shortcut</artifactId>
-            <version>0.0.8-SNAPSHOT</version>
+            <version>0.0.9</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
